# eos-V2

./: .gitignore  CONFIGURATION.md  CONTRIBUTING.md  FRONTEND_API_DOCS.md  FRONTEND_DEVELOPMENT.md  README.md  TODO.md  WEBDESIGN.md  compare_implementations.py  cookies.txt  load_sample_data.py  pyproject.toml  requirements.txt  run.py  test_search_engine.py  test_tokenization_behavior.py  test_whoosh_search.py  test_whoosh_simple.py
app/: API_REFERENCE.md  __init__.py
app/routes/: __init__.py  api.py  main.py
app/services/: japanese_text_processor.py  multi_index_search_service.py  query_processor.py  search_logger.py  search_service.py  search_service_whoosh.py  simple_search.py  whoosh_indexer.py  whoosh_japanese_search.py  whoosh_simple.py
conf/: config.yaml  json_companies.yaml  tokenize.yaml  tokenize_csv.yaml  tokenize_json.yaml
conf/presets/: csv_companies.yaml  json_companies.yaml
data/: README.md  prefecture_cities.json  sample_companies.csv  sample_companies.json  search_logs.jsonl  test_company_info.csv
data/osaka/: company_001.json
data/test_debug_index/: MAIN_c74f2pzr7hc08eic.seg  _MAIN_1.toc
data/test_json_companies/: company_001.json  (+1 more)
docs/: README.md
scripts/: README.md  TOKENIZED_FORMAT.md  add_to_index.py  create_index.py  delete_index.py  index_info.py  tokenize_csv.py
templates/: app.html  base.html  history.html  index.html  login.html  rankings.html  search.html
tests/: __init__.py  compare_implementations.py  test_api_routes.py  test_search_engine.py  test_tokenization_behavior.py  test_whoosh_search.py  test_whoosh_simple.py
(+125 files in other folders)
