[project]
name = "search-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.12.2",
    "flask==2.3.3",
    "hydra-core>=1.3.2",
    "janome==0.4.2",
    "pandas>=2.3.2",
    "requests==2.31.0",
    "whoosh==2.7.4",
]
